change ui design(font,font size)

--- a/html/index.html
+++ b/html/index.html
@@ -4,14 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Banana Realm</title>
+
+  <!-- Adventure Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Pirata+One&family=Kalam:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
+  <div class="overlay"></div>
+
   <div class="container">
-    <h1>BANANA REALM</h1>
-    <h2>WELCOME TO ADVENTURE</h2>
-    <button id="startBtn">START ADVENTURE &raquo;&raquo;&raquo;</button>
+    <h1 class="title">BANANA REALM</h1>
+    <h2 class="subtitle">WELCOME TO THE ADVENTURE</h2>
+
+    <button id="startBtn" class="adventure-btn">
+      START ADVENTURE &raquo;&raquo;&raquo;
+    </button>
   </div>
+
+  <footer>
+    © 2025 Banana Realm | Jungle Adventures 🍌🌴
+  </footer>
 
   <script src="../js/script.js"></script>
 </body>
