--- a/html/level-select.html
+++ b/html/level-select.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="../css/level_select.css" />
 </head>
 <body>
+
+      <!-- Music Controls -->
+  <div class="music-controls">
+    <button id="musicToggle" class="music-btn">🔇</button>
+    <div class="volume-control">
+      <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="0.7">
+    </div>
+  </div>
+
   <div class="container">
     <header class="header">
       <h1>SELECT YOUR ADVENTURE</h1>
@@ -49,6 +58,18 @@
     </div>
   </div>
 
+  <!-- Audio Element -->
+  <audio id="backgroundMusic" loop preload="metadata">
+    <source src="../Audio/audio1.mp3" type="audio/mpeg">
+    <source src="../Audio/audio1.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+  </audio>
+
+   <footer>
+    © 2025 Banana Realm | Jungle Adventures 🍌🌴
+  </footer>
+
+  
   <script src="../js/level_select.js"></script>
 </body>
 </html>
