--- a/html/login.html
+++ b/html/login.html
@@ -8,18 +8,20 @@
 </head>
 <body>
   <div class="login-container">
-    
 
     <div class="login-box">
       <h1>WELCOME</h1>
 
       <form id="loginForm">
-        <label for="username">USER NAME</label>
-        <input type="text" id="username" placeholder="Enter username" required>
+
+        <label for="email">EMAIL</label>
+        <input type="email" id="email" placeholder="Enter your email" required>
 
         <label for="password">PASSWORD</label>
         <input type="password" id="password" placeholder="Enter password" required>
 
+        <p class="forgot" id="forgotPassword">Forgot Password?</p>
+        
         <button type="submit">LOGIN</button>
       </form>
 
@@ -28,6 +30,6 @@
     </div>
   </div>
 
-  <script src="../js/login.js"></script>
+  <script type="module" src="../js/login.js"></script>
 </body>
 </html>
